--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <br><br>
 
   <button 
-    hx-get="/more-cupcakes" 
+    hx-get="more-cupcakes.html" 
     hx-target="#cupcake-box" 
     hx-swap="beforeend">
     🍰 Show Me More Cupcakes!
